--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Lotto Number Generator</h1>
+        <h1>Lotto Number Generator.</h1>
         <div class="numbers"></div>
         <button id="generate">Generate Numbers</button>
     </div>
