로또 생성기를 저녁 메뉴 추천 사이트로 변환

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lotto Number Generator</title>
+    <title>저녁 메뉴 추천</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>Lotto Number Generator.</h1>
-        <div class="numbers"></div>
-        <button id="generate">Generate Numbers</button>
+        <h1>오늘 저녁 뭐 먹지?</h1>
+        <div class="menu-display"></div>
+        <button id="generate">메뉴 추천받기</button>
     </div>
     <script src="main.js"></script>
 </body>
