영어 버전을 추가하고 언어 선택 기능을 구현

--- a/index-en.html
+++ b/index-en.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>저녁 메뉴 추천</title>
+    <title>Dinner Menu Recommendation</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <h1>오늘 저녁 뭐 먹지?</h1>
+        <h1>What should I eat for dinner?</h1>
         <div class="menu-display"></div>
-        <button id="generate">메뉴 추천받기</button>
+        <button id="generate">Get Recommendation</button>
         <div class="language-switcher">
-            <a href="index-en.html">English</a>
+            <a href="index.html">한국어</a>
         </div>
     </div>
-    <script src="main.js"></script>
+    <script src="main-en.js"></script>
 </body>
 </html>
