feat: Add Formspree contact form

--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
         <h1>오늘 저녁 뭐 먹지?</h1>
         <div class="menu-display"></div>
         <button id="generate">메뉴 추천받기</button>
+
+        <div class="form-section">
+            <h2>제휴 문의</h2>
+            <form action="https://formspree.io/f/xreeqjeg" method="POST">
+                <label for="name">이름:</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">이메일:</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">메시지:</label>
+                <textarea id="message" name="message" rows="5" required></textarea>
+
+                <button type="submit">보내기</button>
+            </form>
+        </div>
+
         <div class="language-switcher">
             <a href="index-en.html">English</a>
         </div>
