--- a/index.html
+++ b/index.html
@@ -10,11 +10,34 @@
     <meta name="google-adsense-account" content="ca-pub-4338605833549006">
 </head>
 <body>
-    <h1>동물상 테스트</h1>
-    <p>사진을 업로드하여 강아지상인지 고양이상인지 확인해보세요.</p>
-    <input type="file" id="imageUpload" accept="image/*" />
-    <div id="image-container"></div>
-    <div id="label-container"></div>
+    <header>
+        <nav>
+            <a href="index.html">홈</a>
+            <a href="about.html">소개</a>
+            <a href="privacy.html">개인정보처리방침</a>
+        </nav>
+    </header>
+
+    <main>
+        <h1>동물상 테스트</h1>
+        <p>당신의 얼굴은 강아지상일까요, 고양이상일까요? 사진을 업로드하여 인공지능이 판단하는 당신의 동물상을 확인해보세요!</p>
+        
+        <div class="tool-container">
+            <input type="file" id="imageUpload" accept="image/*" />
+            <div id="image-container"></div>
+            <div id="label-container"></div>
+        </div>
+
+        <div class="content-section">
+            <h2>테스트는 어떻게 진행되나요?</h2>
+            <p>이 테스트는 Google의 Teachable Machine을 기반으로 한 인공지능 모델을 사용합니다. 수백 장의 강아지와 고양이 사진을 학습한 모델이 당신의 사진 특징을 분석하여 결과를 알려줍니다. 모든 과정은 당신의 브라우저에서만 실행되며, 사진은 어디에도 전송되거나 저장되지 않습니다.</p>
+            <p>더 자세한 정보는 <a href="about.html">소개 페이지</a>를 확인해주세요.</p>
+        </div>
+    </main>
+
+    <footer>
+        <p>&copy; 2026 동물상 테스트. 모든 권리 보유.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
