feat: Add placeholder AdSense ad unit

--- a/index.html
+++ b/index.html
@@ -28,6 +28,19 @@
             <div id="label-container"></div>
         </div>
 
+        <div class="adsense-placeholder">
+            <!-- 동물상 테스트 광고 단위 (사용자 계정에서 생성 후 data-ad-slot 값 변경 필요) -->
+            <ins class="adsbygoogle"
+                 style="display:block; text-align:center;"
+                 data-ad-layout="in-article"
+                 data-ad-format="fluid"
+                 data-ad-client="ca-pub-4338605833549006"
+                 data-ad-slot="YOUR_AD_SLOT_ID_HERE"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+
         <div class="content-section">
             <h2>테스트는 어떻게 진행되나요?</h2>
             <p>이 테스트는 Google의 Teachable Machine을 기반으로 한 인공지능 모델을 사용합니다. 수백 장의 강아지와 고양이 사진을 학습한 모델이 당신의 사진 특징을 분석하여 결과를 알려줍니다. 모든 과정은 당신의 브라우저에서만 실행되며, 사진은 어디에도 전송되거나 저장되지 않습니다.</p>
