feat: Re-integrate dinner menu recommendation feature

--- a/about.html
+++ b/about.html
@@ -9,7 +9,8 @@
 <body>
     <header>
         <nav>
-            <a href="index.html">홈</a>
+            <a href="index.html">동물상 테스트</a>
+            <a href="dinner.html">저녁 메뉴 추천</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보처리방침</a>
         </nav>
