feat: 애드센스 승인을 위한 웹사이트 콘텐츠 강화
-  신규 생성 및 정보성 글 추가
- , ,  페이지 콘텐츠 보강
-  개인정보처리방침 상세화
- 신규 콘텐츠에 대한  스타일 추가
- 전체 페이지 네비게이션에  링크 적용

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <nav>
             <a href="index.html">동물상 테스트</a>
             <a href="dinner.html">저녁 메뉴 추천</a>
+            <a href="content.html">콘텐츠</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보처리방침</a>
         </nav>
@@ -43,9 +44,17 @@
         </div>
 
         <div class="content-section">
+            <h2>✨ 당신의 동물상은 무엇인가요?</h2>
+            <p>사람들은 흔히 얼굴 생김새나 분위기에 따라 '강아지상', '고양이상', '토끼상', '공룡상' 등 다양한 동물에 비유하곤 합니다. 이것은 과학적인 근거는 없지만, 각 동물이 가진 이미지와 사람의 특징을 연결하여 재미로 즐기는 일종의 놀이 문화입니다.</p>
+            <ul>
+                <li><strong>🐶 강아지상:</strong> 선하고 귀여운 눈매, 동글동글한 얼굴선이 특징입니다. 친근하고 사랑스러운 분위기를 풍깁니다.</li>
+                <li><strong>🐱 고양이상:</strong> 날카롭고 섹시한 눈매, 갸름한 얼굴선이 특징입니다. 도도하고 시크한 분위기를 자아냅니다.</li>
+            </ul>
+            <p>저희 테스트는 인공지능을 통해 당신의 얼굴이 강아지상과 고양이상 중 어느 쪽에 더 가까운지 분석해드립니다. 지금 바로 사진을 업로드하고 결과를 확인해보세요!</p>
+            
             <h2>테스트는 어떻게 진행되나요?</h2>
             <p>이 테스트는 Google의 Teachable Machine을 기반으로 한 인공지능 모델을 사용합니다. 수백 장의 강아지와 고양이 사진을 학습한 모델이 당신의 사진 특징을 분석하여 결과를 알려줍니다. 모든 과정은 당신의 브라우저에서만 실행되며, 사진은 어디에도 전송되거나 저장되지 않습니다.</p>
-            <p>더 자세한 정보는 <a href="about.html">소개 페이지</a>를 확인해주세요.</p>
+            <p>더 자세한 정보는 <a href="about.html">소개 페이지</a>를 확인해주세요. 또한, 동물상에 대한 더 재미있는 이야기가 궁금하다면 <a href="content.html">콘텐츠 페이지</a>를 방문해보세요!</p>
         </div>
     </main>
 
