--- a/about.html
+++ b/about.html
@@ -11,22 +11,33 @@
         <nav>
             <a href="index.html">동물상 테스트</a>
             <a href="dinner.html">저녁 메뉴 추천</a>
+            <a href="content.html">콘텐츠</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보처리방침</a>
         </nav>
     </header>
 
-    <main>
+    <main class="content-page">
         <h1>소개</h1>
-        <p>'동물상 테스트'에 오신 것을 환영합니다.</p>
-        <p>이 웹사이트는 Google의 Teachable Machine을 사용하여 여러분의 사진이 강아지상에 가까운지, 고양이상에 가까운지를 알려주는 간단한 도구입니다.</p>
+        <p>'동물상 테스트'는 인공지능 기술을 통해 일상에 작은 재미와 즐거움을 더하고자 만들어진 웹사이트입니다. 저희는 사용자들이 자신의 또 다른 모습을 발견하고, 친구들과 즐거운 추억을 쌓을 수 있는 공간을 제공하고자 합니다.</p>
         
         <h2>어떻게 작동하나요?</h2>
-        <p>저희는 수백 장의 강아지와 고양이 사진을 인공지능 모델(Teachable Machine)에 학습시켰습니다. 사용자가 사진을 업로드하면, 이 모델은 사진의 특징을 분석하여 학습된 데이터를 기반으로 강아지상과 고양이상 확률을 계산하여 보여줍니다.</p>
-        <p>이 결과는 과학적인 근거가 없으며, 재미로만 즐겨주시길 바랍니다.</p>
+        <p>저희 '동물상 테스트'는 Google의 Teachable Machine이라는 강력한 머신러닝 도구를 기반으로 합니다. 개발 과정은 다음과 같습니다.</p>
+        <ol>
+            <li><strong>데이터 수집:</strong> 명확한 특징을 가진 수백 장의 강아지와 고양이 사진 데이터를 수집합니다.</li>
+            <li><strong>모델 학습:</strong> 수집된 데이터를 인공지능 모델에 학습시켜, 각 동물의 고유한 특징을 스스로 학습하게 합니다.</li>
+            <li><strong>분석 및 결과 제공:</strong> 사용자가 사진을 업로드하면, 학습된 모델이 이미지의 패턴을 분석하여 강아지상과 고양이상 확률을 실시간으로 계산하여 보여줍니다.</li>
+        </ol>
+        <p>이 모든 과정은 사용자의 브라우저에서 직접 처리되므로, 여러분의 소중한 사진은 외부로 전송되거나 저장되지 않습니다. 결과는 과학적 근거가 없으니 재미로 즐겨주세요!</p>
+
+        <h2>우리의 미션</h2>
+        <p>저희는 복잡한 기술을 누구나 쉽고 재미있게 체험할 수 있도록 만드는 것에 큰 가치를 둡니다. '동물상 테스트'와 '저녁 메뉴 추천'은 그 시작일 뿐입니다. 앞으로도 인공지능과 같은 새로운 기술을 활용하여 여러분의 일상에 활력을 불어넣을 수 있는 다양하고 흥미로운 프로젝트를 선보일 예정입니다.</p>
+        
+        <h2>만든 사람들 (가상)</h2>
+        <p>이 프로젝트는 최신 기술에 대한 열정으로 뭉친 작은 팀에 의해 시작되었습니다. 저희는 사용자의 즐거움을 최우선으로 생각하며, 항상 새롭고 흥미로운 아이디어를 탐구하고 있습니다. 저희의 노력에 많은 응원 부탁드립니다!</p>
 
         <h2>데이터 프라이버시</h2>
-        <p>업로드된 사진은 서버에 저장되거나 전송되지 않습니다. 모든 분석 과정은 사용자의 웹 브라우저 내에서만 이루어지므로 안심하고 사용하셔도 좋습니다. 자세한 내용은 <a href="privacy.html">개인정보처리방침</a> 페이지를 참고해주세요.</p>
+        <p>사용자의 프라이버시는 저희에게 매우 중요합니다. 업로드된 사진은 서버에 저장되거나 전송되지 않으며, 모든 분석 과정은 사용자의 웹 브라우저 내에서만 이루어집니다. 더 자세한 내용은 <a href="privacy.html">개인정보처리방침</a> 페이지를 참고해주세요.</p>
     </main>
 
     <footer>
