--- a/dinner.html
+++ b/dinner.html
@@ -12,6 +12,7 @@
         <nav>
             <a href="index.html">동물상 테스트</a>
             <a href="dinner.html">저녁 메뉴 추천</a>
+            <a href="content.html">콘텐츠</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보처리방침</a>
         </nav>
@@ -20,6 +21,7 @@
     <main>
         <div class="container">
             <h1>오늘 저녁 뭐 먹지?</h1>
+            <p class="subtitle">매일 반복되는 고민, 저희가 덜어드릴게요! 아래 '메뉴 추천받기' 버튼을 눌러보세요. 인공지능이 무작위로 오늘의 저녁 메뉴를 추천해드립니다. 어떤 메뉴가 나올지 기대되지 않나요? <br>더 많은 레시피 아이디어가 필요하다면 <a href="content.html">콘텐츠 페이지</a>를 확인해보세요!</p>
             <div class="menu-display"></div>
             <button id="generate">메뉴 추천받기</button>
 
