--- a/privacy.html
+++ b/privacy.html
@@ -11,31 +11,56 @@
         <nav>
             <a href="index.html">동물상 테스트</a>
             <a href="dinner.html">저녁 메뉴 추천</a>
+            <a href="content.html">콘텐츠</a>
             <a href="about.html">소개</a>
             <a href="privacy.html">개인정보처리방침</a>
         </nav>
     </header>
 
-    <main>
+    <main class="content-page text-left">
         <h1>개인정보처리방침</h1>
-        <p>최종 업데이트: 2026년 1월 19일</p>
+        <p><strong>최종 업데이트: 2026년 1월 20일</strong></p>
         
-        <p>'동물상 테스트'는 사용자의 개인정보를 소중하게 생각하며, 개인정보 보호에 최선을 다하고 있습니다.</p>
+        <p>'동물상 테스트'(이하 '사이트')는 이용자의 개인정보를 매우 중요하게 생각하며, 「정보통신망 이용촉진 및 정보보호」에 관한 법률을 준수하고 있습니다. 본 개인정보처리방침을 통해 이용자가 제공하는 개인정보가 어떠한 용도와 방식으로 이용되고 있으며, 개인정보보호를 위해 어떠한 조치가 취해지고 있는지 알려드립니다.</p>
 
-        <h2>수집하는 정보</h2>
-        <p>저희는 사용자가 업로드하는 사진을 포함하여 어떠한 개인 식별 정보도 수집, 저장 또는 전송하지 않습니다. 사진 분석은 전적으로 사용자의 기기(웹 브라우저) 내에서만 이루어집니다.</p>
-
-        <h2>쿠키 및 광고</h2>
-        <p>이 사이트는 Google AdSense를 통해 광고를 표시할 수 있습니다. Google AdSense는 사용자의 관심사에 맞는 광고를 제공하기 위해 쿠키를 사용할 수 있습니다.</p>
+        <h2>1. 수집하는 개인정보의 항목 및 수집방법</h2>
+        <p>본 사이트는 대부분의 서비스를 별도의 사용자 등록 없이 언제든지 이용할 수 있습니다. 다만, 일부 서비스 이용 시 아래와 같은 정보를 수집할 수 있습니다.</p>
         <ul>
-            <li>Google을 포함한 제3자 공급업체는 쿠키를 사용하여 사용자의 이전 웹사이트 방문 기록을 기반으로 광고를 게재합니다.</li>
-            <li>Google의 광고 쿠키를 사용하면 Google 및 파트너가 사용자의 사이트 및/또는 다른 사이트 방문 기록을 기반으로 사용자에게 광고를 표시할 수 있습니다.</li>
-            <li>사용자는 <a href="https://www.google.com/settings/ads" target="_blank">광고 설정</a>에서 맞춤 광고를 선택 해제할 수 있습니다.</li>
+            <li><strong>동물상 테스트:</strong> 저희는 이용자가 업로드하는 사진을 수집, 저장, 또는 외부로 전송하지 않습니다. 이미지 분석은 전적으로 이용자의 웹 브라우저 내에서 클라이언트 측 스크립트를 통해 처리됩니다. 따라서 이용자의 사진 데이터는 저희 서버에 절대 도달하지 않습니다.</li>
+            <li><strong>제휴 문의 (Formspree):</strong> 제휴 문의 양식을 통해 이름, 이메일 주소, 메시지 내용을 수집합니다. 이는 문의에 대한 응답을 드리기 위한 목적으로만 사용됩니다. 이 정보는 제3자 서비스인 Formspree를 통해 처리됩니다.</li>
+            <li><strong>댓글 (Disqus):</strong> 댓글 기능 이용 시, 이용자는 Disqus 계정을 통해 이름, 이메일, 댓글 내용을 제공할 수 있습니다. 이 정보는 제3자 서비스인 Disqus에 의해 수집 및 처리됩니다.</li>
+            <li><strong>자동 수집 정보:</strong> 서비스 이용 과정에서 IP 주소, 쿠키, 방문 일시, 서비스 이용 기록, 불량 이용 기록 등이 자동으로 생성되어 수집될 수 있습니다. 이는 서비스 품질 개선 및 통계 분석을 위해 사용됩니다.</li>
         </ul>
-        <p>자세한 내용은 Google의 <a href="https://policies.google.com/technologies/ads" target="_blank">광고 기술 정책</a>을 참조하시기 바랍니다.</p>
+
+        <h2>2. 개인정보의 수집 및 이용목적</h2>
+        <p>사이트는 수집한 정보를 다음의 목적으로 활용합니다.</p>
+        <ul>
+            <li><strong>서비스 제공:</strong> 동물상 테스트, 저녁 메뉴 추천 등 이용자가 요청한 기능 제공</li>
+            <li><strong>의사소통:</strong> 제휴 문의에 대한 응답 및 공지사항 전달</li>
+            <li><strong>신규 서비스 개발 및 마케팅/광고에의 활용:</strong> 신규 서비스 개발, 통계학적 특성에 따른 서비스 제공 및 광고 게재, 접속 빈도 파악, 이용자의 서비스 이용에 대한 통계</li>
+        </ul>
+
+        <h2>3. 제3자 서비스에 관한 정보</h2>
+        <p>본 사이트는 다음과 같은 제3자 서비스를 포함하고 있습니다:</p>
+        <ul>
+            <li><strong>Google AdSense:</strong> 맞춤형 광고를 제공하기 위해 쿠키를 사용합니다. 이용자는 <a href="https://www.google.com/settings/ads" target="_blank">광고 설정</a>에서 맞춤 광고를 선택 해제할 수 있습니다. Google의 정책에 대한 자세한 내용은 <a href="https://policies.google.com/technologies/ads" target="_blank">여기</a>를 참조하세요.</li>
+            <li><strong>Formspree:</strong> 제휴 문의 양식 제출을 처리합니다. Formspree의 개인정보처리방침은 <a href="https://formspree.io/legal/privacy-policy" target="_blank">여기</a>에서 확인하실 수 있습니다.</li>
+            <li><strong>Disqus:</strong> 댓글 기능을 제공합니다. Disqus의 개인정보처리방침은 <a href="https://help.disqus.com/en/articles/1717103-disqus-privacy-policy" target="_blank">여기</a>에서 확인하실 수 있습니다.</li>
+            <li><strong>Google Teachable Machine:</strong> 동물상 테스트의 핵심 기술이며, 데이터는 브라우저 내에서만 처리됩니다.</li>
+        </ul>
+
+        <h2>4. 쿠키(Cookie)에 관한 사항</h2>
+        <p>이 사이트는 개인화되고 맞춤화된 서비스를 제공하기 위해서 이용자의 정보를 저장하고 수시로 불러오는 '쿠키'를 사용합니다. 쿠키는 웹사이트를 운영하는데 이용되는 서버가 이용자의 브라우저에게 보내는 아주 작은 텍스트 파일로 이용자 컴퓨터의 하드디스크에 저장됩니다.</p>
+        <p>이용자는 쿠키 설치에 대한 선택권을 가지고 있습니다. 따라서, 이용자는 웹 브라우저에서 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다.</p>
+
+        <h2>5. 개인정보의 보유 및 이용기간</h2>
+        <p>원칙적으로, 개인정보 수집 및 이용목적이 달성된 후에는 해당 정보를 지체 없이 파기합니다. 단, 관계법령의 규정에 의하여 보존할 필요가 있는 경우 회사는 아래와 같이 관계법령에서 정한 일정한 기간 동안 회원정보를 보관합니다.</p>
         
-        <h2>문의</h2>
-        <p>본 개인정보처리방침에 대해 질문이 있으신 경우, 저희에게 연락해주시기 바랍니다.</p>
+        <h2>6. 개인정보보호를 위한 기술적/관리적 대책</h2>
+        <p>사이트는 이용자들의 개인정보를 처리함에 있어 개인정보가 분실, 도난, 유출, 변조 또는 훼손되지 않도록 안전성 확보를 위하여 다음과 같은 기술적/관리적 대책을 강구하고 있습니다.</p>
+
+        <h2>7. 개인정보에 관한 민원서비스</h2>
+        <p>본 개인정보처리방침에 대해 질문이나 우려사항이 있으신 경우, <a href="dinner.html">제휴 문의</a> 양식을 통해 연락해주시기 바랍니다.</p>
     </main>
 
     <footer>
