fix: 애드센스 광고 슬롯 ID 적용

--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-4338605833549006"
-                 data-ad-slot="YOUR_AD_SLOT_ID_HERE"
+                 data-ad-slot="3002539958"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
@@ -50,7 +50,7 @@
             <ins class="adsbygoogle"
                  style="display:block"
                  data-ad-client="ca-pub-4338605833549006"
-                 data-ad-slot="YOUR_AD_SLOT_ID_HERE_2"
+                 data-ad-slot="3002539958"
                  data-ad-format="auto"
                  data-full-width-responsive="true"></ins>
             <script>
