--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                  data-ad-layout="in-article"
                  data-ad-format="fluid"
                  data-ad-client="ca-pub-4338605833549006"
-                 data-ad-slot="YOUR_AD_SLOT_ID_HERE"></ins>
+                 data-ad-slot="3002539958"></ins>
             <script>
                  (adsbygoogle = window.adsbygoogle || []).push({});
             </script>
