feat: Google 애널리틱스 태그 추가

--- a/dinner.html
+++ b/dinner.html
@@ -6,6 +6,15 @@
     <title>저녁 메뉴 추천</title>
     <link rel="stylesheet" href="style.css">
     <!-- Note: AdSense script could be added here if desired -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-67PSJQ7X7Q');
+</script>
 </head>
 <body>
     <header>
