--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>개인정보처리방침 - 동물상 테스트</title>
     <link rel="stylesheet" href="style.css">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-67PSJQ7X7Q');
+</script>
 </head>
 <body>
     <header>
