--- a/dinner.html
+++ b/dinner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>저녁 메뉴 추천</title>
+    <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
     <!-- Note: AdSense script could be added here if desired -->
 <!-- Google tag (gtag.js) -->
