--- a/about.html
+++ b/about.html
@@ -3,62 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>소개 - 동물상 테스트</title>
+    <title>Hyo-Coding 소개 | AI 프로젝트와 개발 이야기</title>
+    <meta name="description" content="Hyo-Coding은 최신 기술을 활용하여 일상에 재미와 가치를 더하는 프로젝트를 만듭니다. 저희의 비전, 미션, 그리고 진행 중인 프로젝트들을 만나보세요.">
+
+    <!-- SEO - Canonical Link -->
+    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/about.html">
+
+    <!-- Open Graph (for social media sharing) -->
+    <meta property="og:title" content="Hyo-Coding 소개">
+    <meta property="og:description" content="기술로 일상을 즐겁게 만드는 Hyo-Coding의 이야기를 만나보세요.">
+    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/about.html">
+    <meta property="og:type" content="website">
+
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-67PSJQ7X7Q');
-</script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "v4uyp8q02x");
-</script>
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-67PSJQ7X7Q');
+    </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v4uyp8q02x");
+    </script>
 </head>
 <body>
     <header>
-        <nav>
-            <a href="index.html">동물상 테스트</a>
-            <a href="dinner.html">저녁 메뉴 추천</a>
-            <a href="content.html">콘텐츠</a>
-            <a href="about.html">소개</a>
-            <a href="privacy.html">개인정보처리방침</a>
-        </nav>
+        <div class="nav-container">
+            <a href="index.html" class="logo">Hyo-Coding</a>
+            <nav>
+                <a href="index.html">동물상 테스트</a>
+                <a href="dinner.html">저녁 메뉴 추천</a>
+                <a href="content.html">블로그</a>
+                <a href="about.html">소개</a>
+            </nav>
+        </div>
     </header>
 
     <main class="content-page">
-        <h1>소개</h1>
-        <p>'동물상 테스트'는 인공지능 기술을 통해 일상에 작은 재미와 즐거움을 더하고자 만들어진 웹사이트입니다. 저희는 사용자들이 자신의 또 다른 모습을 발견하고, 친구들과 즐거운 추억을 쌓을 수 있는 공간을 제공하고자 합니다.</p>
+        <section>
+            <h1>Hyo-Coding에 대하여</h1>
+            <p>Hyo-Coding은 최신 기술을 통해 일상에 작은 재미와 즐거움을 더하는 것을 목표로 하는 기술 블로그 및 포트폴리오 사이트입니다. 저희는 사용자들이 자신의 또 다른 모습을 발견하고, 기술과 더 가까워질 수 있는 공간을 제공하고자 합니다.</p>
+        </section>
         
-        <h2>어떻게 작동하나요?</h2>
-        <p>저희 '동물상 테스트'는 Google의 Teachable Machine이라는 강력한 머신러닝 도구를 기반으로 합니다. 개발 과정은 다음과 같습니다.</p>
-        <ol>
-            <li><strong>데이터 수집:</strong> 명확한 특징을 가진 수백 장의 강아지와 고양이 사진 데이터를 수집합니다.</li>
-            <li><strong>모델 학습:</strong> 수집된 데이터를 인공지능 모델에 학습시켜, 각 동물의 고유한 특징을 스스로 학습하게 합니다.</li>
-            <li><strong>분석 및 결과 제공:</strong> 사용자가 사진을 업로드하면, 학습된 모델이 이미지의 패턴을 분석하여 강아지상과 고양이상 확률을 실시간으로 계산하여 보여줍니다.</li>
-        </ol>
-        <p>이 모든 과정은 사용자의 브라우저에서 직접 처리되므로, 여러분의 소중한 사진은 외부로 전송되거나 저장되지 않습니다. 결과는 과학적 근거가 없으니 재미로 즐겨주세요!</p>
+        <section>
+            <h2>우리의 미션</h2>
+            <p>복잡한 기술을 누구나 쉽고 재미있게 체험할 수 있도록 만드는 것에 큰 가치를 둡니다. 'AI 동물상 테스트'와 '저녁 메뉴 추천'은 그 시작입니다. 앞으로도 인공지능과 같은 새로운 기술을 활용하여 여러분의 일상에 활력을 불어넣을 수 있는 다양하고 흥미로운 프로젝트를 선보일 예정입니다. 기술적인 도전과 해결 과정은 <a href="content.html">블로그</a>를 통해 공유합니다.</p>
+        </section>
 
-        <h2>우리의 미션</h2>
-        <p>저희는 복잡한 기술을 누구나 쉽고 재미있게 체험할 수 있도록 만드는 것에 큰 가치를 둡니다. '동물상 테스트'와 '저녁 메뉴 추천'은 그 시작일 뿐입니다. 앞으로도 인공지능과 같은 새로운 기술을 활용하여 여러분의 일상에 활력을 불어넣을 수 있는 다양하고 흥미로운 프로젝트를 선보일 예정입니다.</p>
-        
-        <h2>만든 사람들 (가상)</h2>
-        <p>이 프로젝트는 최신 기술에 대한 열정으로 뭉친 작은 팀에 의해 시작되었습니다. 저희는 사용자의 즐거움을 최우선으로 생각하며, 항상 새롭고 흥미로운 아이디어를 탐구하고 있습니다. 저희의 노력에 많은 응원 부탁드립니다!</p>
+        <section>
+            <h2>대표 프로젝트: AI 동물상 테스트</h2>
+            <p>저희의 대표 프로젝트 '동물상 테스트'는 Google의 Teachable Machine이라는 강력한 머신러닝 도구를 기반으로 합니다. 개발 과정은 다음과 같습니다.</p>
+            <ol>
+                <li><strong>데이터 수집:</strong> 명확한 특징을 가진 수백 장의 강아지와 고양이 사진 데이터를 수집합니다.</li>
+                <li><strong>모델 학습:</strong> 수집된 데이터를 인공지능 모델에 학습시켜, 각 동물의 고유한 특징을 스스로 학습하게 합니다.</li>
+                <li><strong>분석 및 결과 제공:</strong> 사용자가 사진을 업로드하면, 학습된 모델이 이미지의 패턴을 분석하여 강아지상과 고양이상 확률을 실시간으로 계산하여 보여줍니다.</li>
+            </ol>
+            <p>이 모든 과정은 사용자의 브라우저에서 직접 처리되므로, 여러분의 소중한 사진은 외부로 전송되거나 저장되지 않습니다. 결과는 과학적 근거가 없으니 재미로 즐겨주세요!</p>
+        </section>
 
-        <h2>데이터 프라이버시</h2>
-        <p>사용자의 프라이버시는 저희에게 매우 중요합니다. 업로드된 사진은 서버에 저장되거나 전송되지 않으며, 모든 분석 과정은 사용자의 웹 브라우저 내에서만 이루어집니다. 더 자세한 내용은 <a href="privacy.html">개인정보처리방침</a> 페이지를 참고해주세요.</p>
+        <section>
+            <h2>데이터 프라이버시</h2>
+            <p>사용자의 프라이버시는 저희에게 매우 중요합니다. 업로드된 사진은 서버에 저장되거나 전송되지 않으며, 모든 분석 과정은 사용자의 웹 브라우저 내에서만 이루어집니다. 더 자세한 내용은 <a href="privacy.html">개인정보처리방침</a> 페이지를 참고해주세요.</p>
+        </section>
     </main>
 
     <footer>
-        <p>&copy; 2026 동물상 테스트. 모든 권리 보유.</p>
+        <div class="footer-container">
+            <p>&copy; 2026 Hyo-Coding. All Rights Reserved.</p>
+            <p><a href="privacy.html">개인정보처리방침</a></p>
+        </div>
     </footer>
 </body>
 </html>
