--- a/dinner.html
+++ b/dinner.html
@@ -3,67 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>저녁 메뉴 추천</title>
+    <title>오늘 저녁 뭐 먹지? | Hyo-Coding</title>
+    <meta name="description" content="매일 반복되는 저녁 메뉴 고민, Hyo-Coding의 저녁 메뉴 추천 도구로 해결하세요. 버튼 하나로 랜덤 메뉴를 추천받고 즐거운 식사를 계획해보세요.">
+
+    <!-- SEO - Canonical Link -->
+    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/dinner.html">
+
+    <!-- Open Graph (for social media sharing) -->
+    <meta property="og:title" content="오늘 저녁 뭐 먹지?">
+    <meta property="og:description" content="버튼 하나로 결정하는 오늘의 저녁 메뉴! Hyo-Coding이 도와드립니다.">
+    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/dinner.html">
+    <meta property="og:type" content="website">
+
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="style.css">
-    <!-- Note: AdSense script could be added here if desired -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-67PSJQ7X7Q');
-</script>
-<script type="text/javascript">
-    (function(c,l,a,r,i,t,y){
-        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-    })(window, document, "clarity", "script", "v4uyp8q02x");
-</script>
+    <!-- Google Analytics & AdSense -->
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4338605833549006" crossorigin="anonymous"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-67PSJQ7X7Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-67PSJQ7X7Q');
+    </script>
+    <script type="text/javascript">
+        (function(c,l,a,r,i,t,y){
+            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+        })(window, document, "clarity", "script", "v4uyp8q02x");
+    </script>
 </head>
 <body>
-    <header>
-        <nav>
-            <a href="index.html">동물상 테스트</a>
-            <a href="dinner.html">저녁 메뉴 추천</a>
-            <a href="content.html">콘텐츠</a>
-            <a href="about.html">소개</a>
-            <a href="privacy.html">개인정보처리방침</a>
-        </nav>
+    <header class="header">
+        <div class="nav-container container">
+            <a href="index.html" class="nav-logo">Hyo-Coding</a>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="index.html" class="nav-link">동물상 테스트</a></li>
+                    <li class="nav-item"><a href="dinner.html" class="nav-link">저녁 메뉴 추천</a></li>
+                    <li class="nav-item"><a href="content.html" class="nav-link">블로그</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">소개</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
-        <div class="container">
-            <h1>오늘 저녁 뭐 먹지?</h1>
-            <p class="subtitle">매일 반복되는 고민, 저희가 덜어드릴게요! 아래 '메뉴 추천받기' 버튼을 눌러보세요. 인공지능이 무작위로 오늘의 저녁 메뉴를 추천해드립니다. 어떤 메뉴가 나올지 기대되지 않나요? <br>더 많은 레시피 아이디어가 필요하다면 <a href="content.html">콘텐츠 페이지</a>를 확인해보세요!</p>
-            <div class="menu-display"></div>
-            <button id="generate">메뉴 추천받기</button>
+        <section class="section">
+            <div class="container">
+                <h1 class="section-title">오늘 저녁 뭐 먹지?</h1>
+                <p class="subtitle" style="text-align: center;">매일 반복되는 고민, 저희가 덜어드릴게요! 아래 버튼을 눌러 오늘의 저녁 메뉴를 추천받아보세요.</p>
 
-            <div class="form-section">
-                <h2>제휴 문의</h2>
-                <form action="https://formspree.io/f/xreeqjeg" method="POST">
-                    <label for="name">이름:</label>
-                    <input type="text" id="name" name="name" required>
+                <div class="tool-section">
+                    <div class="menu-display" style="min-height: 150px; font-size: 1.5rem; font-weight: bold; color: var(--primary-color);"></div>
+                    <button id="generate" class="button" style="padding: 1rem 2rem; font-size: 1.2rem; background-color: var(--primary-color); color: white; border: none; border-radius: .5rem; cursor: pointer;">메뉴 추천받기</button>
+                </div>
+                
+                <div class="adsense-section">
+                    <!-- Ad unit placeholder -->
+                </div>
 
-                    <label for="email">이메일:</label>
-                    <input type="email" id="email" name="email" required>
-
-                    <label for="message">메시지:</label>
-                    <textarea id="message" name="message" rows="5" required></textarea>
-
-                    <button type="submit">보내기</button>
-                </form>
+                <div id="disqus_thread" style="margin-top: 2rem;"></div>
             </div>
-
-            <div id="disqus_thread"></div>
-        </div>
+        </section>
     </main>
 
-    <footer>
-        <p>&copy; 2026 동물상 테스트. 모든 권리 보유.</p>
+    <footer class="footer">
+        <div class="footer-container">
+            <p>&copy; 2026 Hyo-Coding. All Rights Reserved.</p>
+            <p><a href="privacy.html">개인정보처리방침</a></p>
+        </div>
     </footer>
 
     <script>
@@ -74,7 +86,6 @@
         (d.head || d.body).appendChild(s);
         })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <script src="main.js"></script>
+    <script src="main-en.js"></script>
 </body>
 </html>
