--- a/content.html
+++ b/content.html
@@ -7,13 +7,13 @@
     <meta name="description" content="Hyo-Coding 블로그에서 AI 프로젝트 개발기, 최신 기술 트렌드, 그리고 일상에 영감을 주는 다양한 이야기들을 만나보세요.">
 
     <!-- SEO - Canonical Link -->
-    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/content.html">
+    <link rel="canonical" href="https://hyocoding.cc/content.html">
 
     <!-- Open Graph (for social media sharing) -->
     <meta property="og:title" content="Hyo-Coding 블로그">
     <meta property="og:description" content="기술, AI, 그리고 일상의 기록. Hyo-Coding의 개발 이야기를 만나보세요.">
-    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
-    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/content.html">
+    <meta property="og:image" content="https://hyocoding.cc/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://hyocoding.cc/content.html">
     <meta property="og:type" content="blog">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
