--- a/dinner.html
+++ b/dinner.html
@@ -7,13 +7,13 @@
     <meta name="description" content="매일 반복되는 저녁 메뉴 고민, Hyo-Coding의 저녁 메뉴 추천 도구로 해결하세요. 버튼 하나로 랜덤 메뉴를 추천받고 즐거운 식사를 계획해보세요.">
 
     <!-- SEO - Canonical Link -->
-    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/dinner.html">
+    <link rel="canonical" href="https://hyocoding.cc/dinner.html">
 
     <!-- Open Graph (for social media sharing) -->
     <meta property="og:title" content="오늘 저녁 뭐 먹지?">
     <meta property="og:description" content="버튼 하나로 결정하는 오늘의 저녁 메뉴! Hyo-Coding이 도와드립니다.">
-    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
-    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/dinner.html">
+    <meta property="og:image" content="https://hyocoding.cc/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://hyocoding.cc/dinner.html">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
