--- a/privacy.html
+++ b/privacy.html
@@ -8,13 +8,13 @@
     <meta name="robots" content="noindex, nofollow">
 
     <!-- SEO - Canonical Link -->
-    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/privacy.html">
+    <link rel="canonical" href="https://hyocoding.cc/privacy.html">
 
     <!-- Open Graph (for social media sharing) -->
     <meta property="og:title" content="개인정보처리방침 | Hyo-Coding">
     <meta property="og:description" content="Hyo-Coding의 개인정보처리방침을 확인하세요.">
-    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
-    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/privacy.html">
+    <meta property="og:image" content="https://hyocoding.cc/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://hyocoding.cc/privacy.html">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
