--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <meta name="description" content="AI가 당신의 얼굴을 분석하여 강아지상인지 고양이상인지 알려드립니다. Hyo-Coding의 재미있는 인공지능 프로젝트를 지금 바로 경험해보세요!">
     
     <!-- SEO - Canonical Link -->
-    <link rel="canonical" href="https://product-builder-lecture-6ve.pages.dev/index.html">
+    <link rel="canonical" href="https://hyocoding.cc/index.html">
 
     <!-- Open Graph (for social media sharing) -->
     <meta property="og:title" content="AI 동물상 테스트">
     <meta property="og:description" content="사진 한 장으로 당신의 동물상을 찾아보세요!">
-    <meta property="og:image" content="https://product-builder-lecture-6ve.pages.dev/pizza-5275191_640.jpg">
-    <meta property="og:url" content="https://product-builder-lecture-6ve.pages.dev/index.html">
+    <meta property="og:image" content="https://hyocoding.cc/pizza-5275191_640.jpg">
+    <meta property="og:url" content="https://hyocoding.cc/index.html">
     <meta property="og:type" content="website">
 
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
