웹사이트 콘텐츠 업데이트 및 사이트맵 추가

--- a/index.html
+++ b/index.html
@@ -38,14 +38,17 @@
     </script>
 </head>
 <body>
-    <header>
-        <div class="nav-container">
-            <a href="index.html" class="logo">Hyo-Coding</a>
-            <nav>
-                <a href="index.html">동물상 테스트</a>
-                <a href="dinner.html">저녁 메뉴 추천</a>
-                <a href="content.html">블로그</a>
-                <a href="about.html">소개</a>
+    <header class="header">
+        <div class="nav-container container">
+            <a href="index.html" class="nav-logo">Hyo-Coding</a>
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="index.html" class="nav-link">동물상 테스트</a></li>
+                    <li class="nav-item"><a href="dinner.html" class="nav-link">저녁 메뉴 추천</a></li>
+                    <li class="nav-item"><a href="content.html" class="nav-link">블로그</a></li>
+                    <li class="nav-item"><a href="about.html" class="nav-link">소개</a></li>
+                    <li class="nav-item"><a href="sitemap.html" class="nav-link">사이트맵</a></li>
+                </ul>
             </nav>
         </div>
     </header>
@@ -92,10 +95,10 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="footer">
         <div class="footer-container">
             <p>&copy; 2026 Hyo-Coding. All Rights Reserved.</p>
-            <p><a href="privacy.html">개인정보처리방침</a></p>
+            <p><a href="privacy.html">개인정보처리방침</a> | <a href="sitemap.html">사이트맵</a></p>
         </div>
     </footer>
 
