--- a/dinner.html
+++ b/dinner.html
@@ -46,6 +46,7 @@
                     <li class="nav-item"><a href="dinner.html" class="nav-link">저녁 메뉴 추천</a></li>
                     <li class="nav-item"><a href="content.html" class="nav-link">블로그</a></li>
                     <li class="nav-item"><a href="about.html" class="nav-link">소개</a></li>
+                    <li class="nav-item"><a href="sitemap.html" class="nav-link">사이트맵</a></li>
                 </ul>
             </nav>
         </div>
@@ -74,7 +75,7 @@
     <footer class="footer">
         <div class="footer-container">
             <p>&copy; 2026 Hyo-Coding. All Rights Reserved.</p>
-            <p><a href="privacy.html">개인정보처리방침</a></p>
+            <p><a href="privacy.html">개인정보처리방침</a> | <a href="sitemap.html">사이트맵</a></p>
         </div>
     </footer>
 
